--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						<div class="form__column-text form__column">
 							If you wanna send me something, well... fill the name and the E-mail, it's mandatory!<br>
 							And then fill the message, whatever you want.
-							<span><span style="color: #FF6464;">*</span> - mandatory</span>
+							<span><span style="color: gold;">*</span> - mandatory</span>
 						</div>
 					</div>
 					</div>
@@ -218,7 +218,7 @@
 	<!-- Button to the top -->
 	<div class="scroll-to-top">
 		<div class="scroll-to-top__btn">
-			<img src="img/icon-arrow-black-up.jpg" alt="#">
+			<i class="fa fa-arrow-up" aria-hidden="true"></i>
 		</div>
 	</div>
 
@@ -243,22 +243,22 @@
 				<div class="footer__flex">
 					<div class="footer__item">
 						<a href="">
-							<img src="img/icons/insta.png" alt="#">
+							<i class="fa fa-instagram" aria-hidden="true"></i>
 						</a>
 					</div>
 					<div class="footer__item">
 						<a href="">
-							<img src="img/icons/fb.png" alt="#">
+							<i class="fa fa-facebook-square" aria-hidden="true"></i>
 						</a>
 					</div>
 					<div class="footer__item">
 						<a href="">
-							<img src="img/icons/Group.png" alt="#">
+							<i class="fa fa-vk" aria-hidden="true"></i>
 						</a>
 					</div>
 					<div class="footer__item">
 						<a href="">
-							<img src="img/icons/Linkedin.png" alt="#">
+							<i class="fa fa-twitter-square" aria-hidden="true"></i>
 						</a>
 					</div>
 					<div class="footer__text">
