--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
 	<header>
+		<div class="custom-shape-divider-top-1636813373">
+			<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+				 <rect x="1200" height="3.6"></rect>
+				 <rect height="3.6"></rect>
+				 <path d="M0,0V3.6H580.08c11,0,19.92,5.09,19.92,13.2,0-8.14,8.88-13.2,19.92-13.2H1200V0Z" class="shape-fill"></path>
+			</svg>
+	  </div>
 		<div class="wrapper">
 				<div class="title">   <!-- https://wallpapercave.com/wp/wp8437230.png -->
 					<a href="img/MiNISO_logo.png" style="text-shadow: 0 0 9px gold;" download>MiNISO</a>
@@ -27,61 +34,73 @@
 		</div>
 	</header>
 	<!-- 											Greet 											 -->
-	<section>
-		<div class="hi" id="about">
-			<div class="container">
-				<div class="hi__main-title">
-					<a href="#about" class="hr_about">
-						<span style="color: #fff;">About</span> <span style="color: gold;text-shadow: 0 0 3px gold;">Me</span>
-					</a>
-				</div>
-				<div class="hi__content">
-					<div class="hi__img-wrapper">
-						<a href="img/me.jpg" download><div class="hi__avatar"></div></a>
+	<section class="About">
+		<section>
+			<div class="hi" id="about">
+				<div class="container">
+					<div class="hi__main-title">
+						<a href="#about" class="hr_about">
+							<span style="color: #fff;">About</span> <span style="color: gold;text-shadow: 0 0 3px gold;">Me</span>
+						</a>
 					</div>
-					<div class="hi__main-text">
-						<div class="hi__title">
-							Hi,I'm <span style="color: gold;text-shadow: 0 0 3px gold;">Dima</span>,
+					<div class="hi__content">
+						<div class="hi__img-wrapper">
+							<a href="img/me.jpg" download><div class="hi__avatar"></div></a>
 						</div>
-						<div class="hi__text">
-							novice programmer
+						<div class="hi__main-text">
+							<div class="hi__title">
+								Hi,I'm <span style="color: gold;text-shadow: 0 0 3px gold;">Dima</span>,
+							</div>
+							<div class="hi__text">
+								novice programmer
+							</div>
 						</div>
-					</div>
-					<button class="hi__button btn">
-						<a href="img/me.jpg" download>Download IMG</a>
-					</button>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- 											About 											 -->
-	<section>
-		<div class="about">
-			<div class="about__container">
-				<div class="about__title">My <span style="color: gold;text-shadow: 0 0 8px gold;letter-spacing: 3px;padding-left: 3px;">Resume</span></div>
-				<div class="about__content">
-					<div class="about__name">
-						<span style="font-size: 23px;color: #27211f">Patronymic:</span><span style="color: gold;text-shadow: 0 0 3px gold;margin-left: 28px;">Bondarenko</span>
-						<span style="color: #666;position: absolute;right: 0;font-size: 23px;text-shadow: 0 0 3px #333;">#1</span><br>
-						<span style="font-size: 23px;color: #27211f;">Name:</span><span style="color: gold;text-shadow: 0 0 3px gold;margin-left: 100px;">Dmitriy</span><br>
-						<span style="font-size: 23px;color: #27211f">Middle name: </span>
-						<span style="color: gold;text-shadow: 0 0 3px gold;">Sergeyevich</span>
-					</div>
-					<div class="about__years">
-						<span style="font-size: 23px;color: #27211f;">Years:</span><span style="color: gold;margin-left: 30px;text-shadow: 0 0 3px gold;">16</span><br>
-						<span style="font-size: 23px;color: #27211f">Birthday:</span><span style="color: gold;text-shadow: 0 0 3px gold;">09.07.2005</span>
-					</div>
-					<div class="about__place">
-						<span style="font-size: 23px;color: #27211f;text-shadow: 0 0 3px #27211f;">Country:</span>
-						<span style="color: gold;text-shadow: 0 0 3px gold;">
-						Belarus</span>
-					</div>
-					<div class="about__study">
-						<span style="color: #27211f;">Study in:</span><span style="color: gold;text-shadow: 0 0 3px gold;padding-left: 15px;">Colledge</span>
+						<div class="hi__button">
+							<div class="main">
+								<div class="wrapper">
+									<div class="btn">
+										<span id="fst"></span>
+										<span id="sec"></span>
+											<a href="img/me.jpg" download>Download</a>
+										<span id="thd"></span>
+										<span id="fth"></span>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
+		<!-- 											About 											 -->
+		<section>
+			<div class="about">
+				<div class="about__container">
+					<div class="about__title">My <span style="color: gold;text-shadow: 0 0 8px gold;letter-spacing: 3px;padding-left: 3px;">Resume</span></div>
+					<div class="about__content">
+						<div class="about__name">
+							<span style="font-size: 23px;color: #27211f">Patronymic:</span><span style="color: gold;text-shadow: 0 0 3px gold;margin-left: 28px;">Bondarenko</span>
+							<span style="color: #666;position: absolute;right: 0;font-size: 23px;text-shadow: 0 0 3px #333;">#1</span><br>
+							<span style="font-size: 23px;color: #27211f;">Name:</span><span style="color: gold;text-shadow: 0 0 3px gold;margin-left: 100px;">Dmitriy</span><br>
+							<span style="font-size: 23px;color: #27211f">Middle name: </span>
+							<span style="color: gold;text-shadow: 0 0 3px gold;">Sergeyevich</span>
+						</div>
+						<div class="about__years">
+							<span style="font-size: 23px;color: #27211f;">Years:</span><span style="color: gold;margin-left: 30px;text-shadow: 0 0 3px gold;">16</span><br>
+							<span style="font-size: 23px;color: #27211f">Birthday:</span><span style="color: gold;text-shadow: 0 0 3px gold;">09.07.2005</span>
+						</div>
+						<div class="about__place">
+							<span style="font-size: 23px;color: #27211f;text-shadow: 0 0 3px #27211f;">Country:</span>
+							<span style="color: gold;text-shadow: 0 0 3px gold;">
+							Belarus</span>
+						</div>
+						<div class="about__study">
+							<span style="color: #27211f;">Study in:</span><span style="color: gold;text-shadow: 0 0 3px gold;padding-left: 15px;">Colledge</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</section>
 	<!-- 											Works 											 -->
 	<section>
@@ -152,7 +171,7 @@
 		<textarea name="message" id="formMessage" class="form__input"></textarea>
 	  -->
 	<!-- 											Form 											 -->
-	  <section>
+	<section>
 		<div class="form">
 			<form action="#" id="form" class="form__body">
 				<a href="#contact" class="hr_contact"><div class="form__title" id="contact">Contact</div></a>
@@ -179,6 +198,19 @@
 						</div>
 					</div>
 					</div>
+					<div class="btnForm__wrapper">
+						<div class="main">
+							<div class="wrapper">
+								<div class="btn" id="btnForm" type="submit">
+									<span id="fst"></span>
+									<span id="sec"></span>
+										SEND
+									<span id="thd"></span>
+									<span id="fth"></span>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</form>
 			<!--
@@ -188,19 +220,6 @@
 				</div>		
 			</div>
 		    -->
-		</div>
-		<div class="btnForm__wrapper">
-			<div class="main">
-				<div class="wrapper">
-					<div class="btn " id="btnForm" type="submit">
-						<span id="fst"></span>
-						<span id="sec"></span>
-							SEND
-						<span id="thd"></span>
-						<span id="fth"></span>
-					</div>
-				</div>
-			</div>
 		</div>
 	</section>
 
@@ -242,7 +261,7 @@
 			<div class="footer__links">
 				<div class="footer__flex">
 					<div class="footer__item">
-						<a href="">
+						<a href="https://www.instagram.com/mi_ni_s0/">
 							<i class="fa fa-instagram" aria-hidden="true"></i>
 						</a>
 					</div>
@@ -265,6 +284,11 @@
 						@2021 All rights reserved
 					</div>
 			</div>
+			<div class="custom-shape-divider-bottom-1636812106">
+				<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+					 <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+				</svg>
+		  </div>
 		</div>
 	</footer>
 
